# english-speaking-practice

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  setup.ps1  setup.sh
.github/workflows/: build-and-push.yml
docs/superpowers/plans/: 2026-07-10-draft-before-submit.md  2026-07-13-homework-and-feedback.md  2026-07-14-homework-bulk-delete-and-feedback-count.md  2026-07-15-homework-table-page.md  2026-07-22-writing-feedback-track-changes.md
docs/superpowers/specs/: 2026-07-13-homework-and-feedback-design.md  2026-07-14-homework-bulk-delete-and-feedback-count-design.md  2026-07-15-homework-table-page-design.md  2026-07-22-writing-feedback-track-changes-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminLoginModal.tsx  AdminPanel.tsx  AudioPlayer.tsx  Banner.tsx  CreateQuestionModal.tsx  DiffView.tsx  FluencyDisplay.tsx  GrammarDisplay.tsx  HistorySidebar.tsx  HomeworkPage.tsx  HomeworkPanel.tsx  IconRail.tsx  Layout.tsx  Leaderboard.tsx  MicPermissionAlert.tsx  MyQuestions.tsx  QuestionAnswerView.tsx  QuestionResultsView.tsx  RecordButton.tsx  RecordingView.tsx  ResultsView.tsx  ShareView.tsx  TrackChangesFeedbackModal.tsx  WordPills.tsx  WritingAnswerView.tsx
frontend/src/hooks/: useAdmin.ts  useAdminNotifications.ts  useRecorder.ts  useUserId.ts
frontend/src/lib/: api.ts  utils.ts  wordDiff.ts
src/: api.rs  data.rs  db.rs  fluency.rs  grammar.rs  main.rs  state.rs
